model performance整理 模型ing

--- a/Models/OriginModel.ipynb
+++ b/Models/OriginModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +57,7 @@
     "pass_0 = pd.read_csv(os.path.join(\"../Version3/Data/PassData/full_0.csv\"), encoding='utf-8')\n",
     "pass_1 = pd.read_csv(os.path.join(\"../Version3/Data/PassData/full_1.csv\"), encoding='utf-8')\n",
     "pass_out = pd.read_csv(os.path.join(\"../Version3/Data/PassData/full_out.csv\"), encoding='utf-8')\n",
-    "pass_overlap = pd.read_csv(os.path.join(\"../Version3/Data/PassData/overlap_data.csv\"), encoding='utf-8')\n",
-    "\n",
-    "full_data = pd.read_csv(os.path.join(\"../Version3/Data/FullData/full.csv\"), encoding='utf-8')"
+    "pass_overlap = pd.read_csv(os.path.join(\"../Version3/Data/PassData/overlap_data.csv\"), encoding='utf-8')"
    ]
   },
   {
@@ -71,10 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "car_out['type'] = 'out'\n",
     "car_overlap['type'] = 'overlap'\n",
     "motor_out['type'] = 'out'\n",
@@ -84,7 +83,10 @@
     "\n",
     "car_out_overlap = pd.concat([car_out, car_overlap])\n",
     "motor_out_overlap = pd.concat([motor_out, motor_overlap])\n",
-    "pass_out_overlap = pd.concat([pass_out, pass_overlap])"
+    "pass_out_overlap = pd.concat([pass_out, pass_overlap])\n",
+    "\n",
+    "# 使用concat較為合理，因為Mapper個別處理過資料，這樣比較公平\n",
+    "full_data = pd.concat([car_0, car_1, car_2, car_out_overlap, motor_0, motor_1, motor_out_overlap, pass_0, pass_1, pass_out_overlap])"
    ]
   },
   {
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -197,6 +199,17 @@
       "['行動電話或電腦或其他相類功能裝置名稱', '肇事逃逸類別名稱-是否肇逃', '當事者區分-類別-大類別名稱-車種']\n",
       "[]\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_14648\\1185092442.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data.drop(columns=columns_to_drop, inplace=True)\n"
+     ]
     }
    ],
    "source": [
@@ -212,24 +225,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "原始特徵數: 35, 保留特徵數: 14\n",
+      "原始特徵數: 35, 保留特徵數: 12\n",
       "原始特徵數: 35, 保留特徵數: 17\n",
+      "原始特徵數: 35, 保留特徵數: 14\n",
+      "原始特徵數: 38, 保留特徵數: 8\n",
+      "原始特徵數: 35, 保留特徵數: 14\n",
       "原始特徵數: 35, 保留特徵數: 16\n",
-      "原始特徵數: 38, 保留特徵數: 7\n",
-      "原始特徵數: 35, 保留特徵數: 15\n",
-      "原始特徵數: 35, 保留特徵數: 15\n",
       "原始特徵數: 38, 保留特徵數: 17\n",
-      "原始特徵數: 30, 保留特徵數: 20\n",
+      "原始特徵數: 30, 保留特徵數: 18\n",
       "原始特徵數: 33, 保留特徵數: 17\n",
-      "原始特徵數: 35, 保留特徵數: 19\n",
-      "原始特徵數: 37, 保留特徵數: 11\n"
+      "原始特徵數: 35, 保留特徵數: 18\n",
+      "原始特徵數: 37, 保留特徵數: 9\n"
      ]
     }
    ],
@@ -242,7 +255,7 @@
     "    y = data['死亡']\n",
     "\n",
     "    # 訓練 RandomForest 模型\n",
-    "    model = RandomForestClassifier()\n",
+    "    model = RandomForestClassifier(random_state=42)\n",
     "    model.fit(X, y)\n",
     "\n",
     "    # 計算特徵重要性\n",
@@ -280,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -357,8 +370,8 @@
       "0    183\n",
       "1     14\n",
       "Name: y, dtype: int64\n",
-      "0    218238\n",
-      "1       965\n",
+      "0    221666\n",
+      "1      1064\n",
       "Name: y, dtype: int64\n"
      ]
     }
@@ -380,24 +393,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(57757, 106)\n",
-      "(43220, 162)\n",
-      "(2119, 248)\n",
-      "(8860, 70)\n",
-      "(69474, 122)\n",
-      "(32786, 96)\n",
-      "(5371, 123)\n",
-      "(540, 100)\n",
+      "(57757, 100)\n",
+      "(43220, 164)\n",
+      "(2119, 223)\n",
+      "(8860, 55)\n",
+      "(69474, 117)\n",
+      "(32786, 114)\n",
+      "(5371, 251)\n",
+      "(540, 93)\n",
       "(2406, 117)\n",
-      "(197, 119)\n",
-      "(219203, 78)\n"
+      "(197, 117)\n",
+      "(222730, 64)\n"
      ]
     }
    ],
@@ -412,27 +425,11 @@
     "print(pass_0_X.shape)\n",
     "print(pass_1_X.shape)\n",
     "print(pass_out_overlap_X.shape)\n",
-    "print(full_data_X.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(222730, 219203)"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "car_0_X.shape[0] + car_1_X.shape[0] + car_2_X.shape[0] + car_out_overlap_X.shape[0] + motor_0_X.shape[0] + motor_1_X.shape[0] + motor_out_overlap_X.shape[0] + pass_0_X.shape[0] + pass_1_X.shape[0] + pass_out_overlap_X.shape[0], full_data_X.shape[0]"
+    "print(full_data_X.shape)\n",
+    "\n",
+    "assert car_0_X.shape[0] + car_1_X.shape[0] + car_2_X.shape[0] + car_out_overlap_X.shape[0] + \\\n",
+    "    motor_0_X.shape[0] + motor_1_X.shape[0] + motor_out_overlap_X.shape[0] + \\\n",
+    "        pass_0_X.shape[0] + pass_1_X.shape[0] + pass_out_overlap_X.shape[0] == full_data_X.shape[0]"
    ]
   },
   {
@@ -444,58 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def xgboost_cm_gridsearch(X, y, random_state=42, n_jobs=12):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=random_state)\n",
-    "\n",
-    "    smote = SMOTE(random_state=random_state, k_neighbors=3)\n",
-    "    enn = EditedNearestNeighbours(n_neighbors=3)\n",
-    "    smote_enn = SMOTEENN(smote=smote, enn=enn, random_state=random_state)\n",
-    "    X_resampled_train, y_resampled_train = smote_enn.fit_resample(X_train, y_train)\n",
-    "\n",
-    "    min_class_count = min(sum(y_test == 0), sum(y_test == 1))\n",
-    "    rus_test = RandomUnderSampler(sampling_strategy={0: min_class_count, 1: min_class_count}, random_state=random_state)\n",
-    "    X_resampled_test, y_resampled_test = rus_test.fit_resample(X_test, y_test)\n",
-    "\n",
-    "    model = XGBClassifier(eval_metric='logloss', random_state=random_state)\n",
-    "    parameters = {\n",
-    "        'n_estimators': [50, 100, 200, 400], # 樹的数量\n",
-    "        'max_depth': [3, 5, 7, 9],\n",
-    "        'learning_rate': [0.01, 0.1, 0.2],\n",
-    "        'colsample_bytree': [0.8, 1.0],  # 每棵樹使用的特征采样比例\n",
-    "    }\n",
-    "    grid_search = GridSearchCV(model, parameters, cv=5, scoring='accuracy', n_jobs=n_jobs)\n",
-    "    grid_search.fit(X_resampled_train, y_resampled_train)\n",
-    "    best_model = grid_search.best_estimator_\n",
-    "\n",
-    "    print(\"Best parameters found by GridSearchCV:\", grid_search.best_params_)\n",
-    "\n",
-    "    y_proba = best_model.predict_proba(X_resampled_test)[:, 1]\n",
-    "\n",
-    "    return y_resampled_test, y_proba, np.arange(len(y_resampled_test))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "full_data xgboost start\n",
-      "Best parameters found by GridSearchCV: {'colsample_bytree': 1.0, 'learning_rate': 0.2, 'max_depth': 9, 'n_estimators': 400}\n",
-      "full_data xgboost done in 1159.79 seconds\n",
-      "full_data logistic start\n",
-      "Best parameters found by GridSearchCV: {'C': 100, 'penalty': 'l2'}\n",
-      "full_data logistic done in 683.69 seconds\n",
-      "full_data svc start\n",
-      "Best parameters found by GridSearchCV: {'C': 10, 'loss': 'squared_hinge'}\n",
-      "full_data svc done in 385.17 seconds\n"
+      "pass_0 xgboost start\n",
+      "Best parameters found by GridSearchCV: {'colsample_bytree': 1.0, 'learning_rate': 0.2, 'max_depth': 7, 'n_estimators': 200}\n",
+      "pass_0 xgboost done in 10.65 seconds\n",
+      "pass_1 xgboost start\n"
      ]
     }
    ],
@@ -505,16 +461,16 @@
     "import gc\n",
     "\n",
     "models = [\n",
-    "    # (\"pass_0\", pass_0_X, pass_0_y),\n",
-    "    # (\"pass_1\", pass_1_X, pass_1_y),\n",
-    "    # (\"pass_out_overlap\", pass_out_overlap_X, pass_out_overlap_y),\n",
-    "    # (\"car_0\", car_0_X, car_0_y),\n",
-    "    # (\"car_1\", car_1_X, car_1_y),\n",
-    "    # (\"car_2\", car_2_X, car_2_y),\n",
-    "    # (\"car_out_overlap\", car_out_overlap_X, car_out_overlap_y),\n",
-    "    # (\"motor_0\", motor_0_X, motor_0_y),\n",
-    "    # (\"motor_1\", motor_1_X, motor_1_y),\n",
-    "    # (\"motor_out_overlap\", motor_out_overlap_X, motor_out_overlap_y),\n",
+    "    (\"pass_0\", pass_0_X, pass_0_y),\n",
+    "    (\"pass_1\", pass_1_X, pass_1_y),\n",
+    "    (\"pass_out_overlap\", pass_out_overlap_X, pass_out_overlap_y),\n",
+    "    (\"car_0\", car_0_X, car_0_y),\n",
+    "    (\"car_1\", car_1_X, car_1_y),\n",
+    "    (\"car_2\", car_2_X, car_2_y),\n",
+    "    (\"car_out_overlap\", car_out_overlap_X, car_out_overlap_y),\n",
+    "    (\"motor_0\", motor_0_X, motor_0_y),\n",
+    "    (\"motor_1\", motor_1_X, motor_1_y),\n",
+    "    (\"motor_out_overlap\", motor_out_overlap_X, motor_out_overlap_y),\n",
     "    (\"full_data\", full_data_X, full_data_y),\n",
     "]\n",
     "\n",
@@ -525,7 +481,7 @@
     "    y_xgb, decision_scores_xgb, indices_xgb = xgboost_cm_gridsearch(X.astype(float), y)\n",
     "    end_time = time.time()\n",
     "    elapsed_time = end_time - start_time\n",
-    "    with open(f\"../Models/ModelPerformanceNofold/xgboost/{name}.pkl\", \"wb\") as f:\n",
+    "    with open(f\"../Models/ModelPerformance/xgboost/{name}.pkl\", \"wb\") as f:\n",
     "        pickle.dump({\n",
     "            'y': y_xgb,\n",
     "            'decision_scores': decision_scores_xgb,\n",
@@ -540,11 +496,10 @@
     "for name, X, y in models:\n",
     "    print(f'{name} logistic start')\n",
     "    start_time = time.time()\n",
-    "    # y_log, decision_scores_log, indices_log = logistic_cm_kfold(X.astype(float), y)\n",
     "    y_log, decision_scores_log, indices_log = logistic_cm_gridsearch(X.astype(float), y)\n",
     "    end_time = time.time()\n",
     "    elapsed_time = end_time - start_time\n",
-    "    with open(f\"../Models/ModelPerformanceNofold/logistic/{name}.pkl\", \"wb\") as f:\n",
+    "    with open(f\"../Models/ModelPerformance/logistic/{name}.pkl\", \"wb\") as f:\n",
     "        pickle.dump({\n",
     "            'y': y_log,\n",
     "            'decision_scores': decision_scores_log,\n",
@@ -562,7 +517,7 @@
     "    y_svc, decision_scores_svc, indices_svc = linear_svc_cm_gridsearch(X.astype(float), y)\n",
     "    end_time = time.time()\n",
     "    elapsed_time = end_time - start_time\n",
-    "    with open(f\"../Models/ModelPerformanceNofold/svc/{name}.pkl\", \"wb\") as f:\n",
+    "    with open(f\"../Models/ModelPerformance/svc/{name}.pkl\", \"wb\") as f:\n",
     "        pickle.dump({\n",
     "            'y': y_svc,\n",
     "            'decision_scores': decision_scores_svc,\n",
