模型完成&確定

--- a/Models/OriginModel.ipynb
+++ b/Models/OriginModel.ipynb
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -449,9 +449,188 @@
      "output_type": "stream",
      "text": [
       "pass_0 xgboost start\n",
+      "Best parameters found by GridSearchCV: {'colsample_bytree': 0.8, 'learning_rate': 0.1, 'max_depth': 9, 'n_estimators': 400}\n",
+      "pass_0 xgboost done in 20.88 seconds\n",
+      "pass_1 xgboost start\n",
+      "Best parameters found by GridSearchCV: {'colsample_bytree': 0.8, 'learning_rate': 0.2, 'max_depth': 5, 'n_estimators': 100}\n",
+      "pass_1 xgboost done in 61.70 seconds\n",
+      "pass_out_overlap xgboost start\n",
+      "Best parameters found by GridSearchCV: {'colsample_bytree': 0.8, 'learning_rate': 0.2, 'max_depth': 3, 'n_estimators': 100}\n",
+      "pass_out_overlap xgboost done in 18.25 seconds\n",
+      "car_0 xgboost start\n",
+      "Best parameters found by GridSearchCV: {'colsample_bytree': 0.8, 'learning_rate': 0.1, 'max_depth': 9, 'n_estimators': 400}\n",
+      "car_0 xgboost done in 490.43 seconds\n",
+      "car_1 xgboost start\n",
+      "Best parameters found by GridSearchCV: {'colsample_bytree': 0.8, 'learning_rate': 0.1, 'max_depth': 9, 'n_estimators': 400}\n",
+      "car_1 xgboost done in 523.75 seconds\n",
+      "car_2 xgboost start\n",
+      "Best parameters found by GridSearchCV: {'colsample_bytree': 1.0, 'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 200}\n",
+      "car_2 xgboost done in 67.04 seconds\n",
+      "car_out_overlap xgboost start\n",
       "Best parameters found by GridSearchCV: {'colsample_bytree': 1.0, 'learning_rate': 0.2, 'max_depth': 7, 'n_estimators': 200}\n",
-      "pass_0 xgboost done in 10.65 seconds\n",
-      "pass_1 xgboost start\n"
+      "car_out_overlap xgboost done in 94.22 seconds\n",
+      "motor_0 xgboost start\n",
+      "Best parameters found by GridSearchCV: {'colsample_bytree': 0.8, 'learning_rate': 0.2, 'max_depth': 9, 'n_estimators': 400}\n",
+      "motor_0 xgboost done in 598.19 seconds\n",
+      "motor_1 xgboost start\n",
+      "Best parameters found by GridSearchCV: {'colsample_bytree': 0.8, 'learning_rate': 0.1, 'max_depth': 9, 'n_estimators': 200}\n",
+      "motor_1 xgboost done in 317.21 seconds\n",
+      "motor_out_overlap xgboost start\n",
+      "Best parameters found by GridSearchCV: {'colsample_bytree': 0.8, 'learning_rate': 0.1, 'max_depth': 7, 'n_estimators': 100}\n",
+      "motor_out_overlap xgboost done in 129.35 seconds\n",
+      "full_data xgboost start\n",
+      "Best parameters found by GridSearchCV: {'colsample_bytree': 1.0, 'learning_rate': 0.2, 'max_depth': 9, 'n_estimators': 400}\n",
+      "full_data xgboost done in 957.29 seconds\n",
+      "pass_0 logistic start\n",
+      "Best parameters found by GridSearchCV: {'C': 10, 'penalty': 'l1'}\n",
+      "pass_0 logistic done in 4.27 seconds\n",
+      "pass_1 logistic start\n",
+      "Best parameters found by GridSearchCV: {'C': 100, 'penalty': 'l1'}\n",
+      "pass_1 logistic done in 21.46 seconds\n",
+      "pass_out_overlap logistic start\n",
+      "Best parameters found by GridSearchCV: {'C': 1, 'penalty': 'l2'}\n",
+      "pass_out_overlap logistic done in 1.79 seconds\n",
+      "car_0 logistic start\n",
+      "Best parameters found by GridSearchCV: {'C': 10, 'penalty': 'l2'}\n",
+      "car_0 logistic done in 385.38 seconds\n",
+      "car_1 logistic start\n",
+      "Best parameters found by GridSearchCV: {'C': 100, 'penalty': 'l1'}\n",
+      "car_1 logistic done in 453.08 seconds\n",
+      "car_2 logistic start\n",
+      "Best parameters found by GridSearchCV: {'C': 10, 'penalty': 'l1'}\n",
+      "car_2 logistic done in 62.60 seconds\n",
+      "car_out_overlap logistic start\n",
+      "Best parameters found by GridSearchCV: {'C': 100, 'penalty': 'l1'}\n",
+      "car_out_overlap logistic done in 18.54 seconds\n",
+      "motor_0 logistic start\n",
+      "Best parameters found by GridSearchCV: {'C': 100, 'penalty': 'l1'}\n",
+      "motor_0 logistic done in 436.59 seconds\n",
+      "motor_1 logistic start\n",
+      "Best parameters found by GridSearchCV: {'C': 100, 'penalty': 'l1'}\n",
+      "motor_1 logistic done in 219.08 seconds\n",
+      "motor_out_overlap logistic start\n",
+      "Best parameters found by GridSearchCV: {'C': 100, 'penalty': 'l1'}\n",
+      "motor_out_overlap logistic done in 109.30 seconds\n",
+      "full_data logistic start\n",
+      "Best parameters found by GridSearchCV: {'C': 1, 'penalty': 'l1'}\n",
+      "full_data logistic done in 380.46 seconds\n",
+      "pass_0 svc start\n",
+      "Best parameters found by GridSearchCV: {'C': 10, 'loss': 'hinge'}\n",
+      "pass_0 svc done in 1.09 seconds\n",
+      "pass_1 svc start\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:1235: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters found by GridSearchCV: {'C': 100, 'loss': 'hinge'}\n",
+      "pass_1 svc done in 37.79 seconds\n",
+      "pass_out_overlap svc start\n",
+      "Best parameters found by GridSearchCV: {'C': 100, 'loss': 'squared_hinge'}\n",
+      "pass_out_overlap svc done in 0.18 seconds\n",
+      "car_0 svc start\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:1235: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters found by GridSearchCV: {'C': 10, 'loss': 'hinge'}\n",
+      "car_0 svc done in 105.22 seconds\n",
+      "car_1 svc start\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:1235: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters found by GridSearchCV: {'C': 100, 'loss': 'hinge'}\n",
+      "car_1 svc done in 200.34 seconds\n",
+      "car_2 svc start\n",
+      "Best parameters found by GridSearchCV: {'C': 100, 'loss': 'hinge'}\n",
+      "car_2 svc done in 35.76 seconds\n",
+      "car_out_overlap svc start\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:1235: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters found by GridSearchCV: {'C': 100, 'loss': 'hinge'}\n",
+      "car_out_overlap svc done in 10.77 seconds\n",
+      "motor_0 svc start\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:1235: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters found by GridSearchCV: {'C': 100, 'loss': 'hinge'}\n",
+      "motor_0 svc done in 164.66 seconds\n",
+      "motor_1 svc start\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\USER\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:1235: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters found by GridSearchCV: {'C': 100, 'loss': 'hinge'}\n",
+      "motor_1 svc done in 136.82 seconds\n",
+      "motor_out_overlap svc start\n",
+      "Best parameters found by GridSearchCV: {'C': 100, 'loss': 'squared_hinge'}\n",
+      "motor_out_overlap svc done in 9.56 seconds\n",
+      "full_data svc start\n",
+      "Best parameters found by GridSearchCV: {'C': 10, 'loss': 'squared_hinge'}\n",
+      "full_data svc done in 902.37 seconds\n"
      ]
     }
    ],
