--- a/Version3/Pass.ipynb
+++ b/Version3/Pass.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -112,10 +112,70 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "由於人的狀態資料量已經很少，所以不進行下採樣"
+    "from kmodes.kmodes import KModes\n",
+    "\n",
+    "cost = []\n",
+    "all_results = {}\n",
+    "K = range(1, 6)\n",
+    "\n",
+    "for k in K:\n",
+    "\n",
+    "    km = KModes(\n",
+    "    n_clusters=k, \n",
+    "    init='Huang',\n",
+    "    verbose=1,\n",
+    "    random_state=42,\n",
+    "    n_jobs=10\n",
+    "    )\n",
+    "\n",
+    "    labels = km.fit_predict(rbind_data)\n",
+    "    cost.append(km.cost_)\n",
+    "    all_results[k] = {\n",
+    "        'cost': km.cost_,\n",
+    "        'labels': labels,\n",
+    "        'centroids': km.cluster_centroids_\n",
+    "    }\n",
+    "\n",
+    "optimal_k = K[cost.index(min(cost))]\n",
+    "optimal_result = all_results[optimal_k]\n",
+    "\n",
+    "# with open('Version3/Data/CarData/kmode_result.pickle', 'wb') as f:\n",
+    "#     pickle.dump(all_results, f)\n",
+    "\n",
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.plot(K, cost, marker='o')\n",
+    "plt.xlabel('Number of Clusters (k)')\n",
+    "plt.ylabel('Cost')\n",
+    "plt.title('Elbow Method for Optimal k')\n",
+    "plt.show()\n",
+    "# save all_results\n",
+    "with open('./Data/Kmode/Pass.pkl', 'wb') as f:\n",
+    "    pickle.dump(all_results, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    2298\n",
+      "1     845\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pd.Series(all_results[2]['labels']).value_counts())\n",
+    "rbind_data['Cluster'] = all_results[2]['labels']"
    ]
   },
   {
@@ -230,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,11 +335,21 @@
     "rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']\n",
     "\n",
     "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=87, iterations=100, dim=2,\n",
-    "                                range_lst=[-0.25, 0.175, 0.25, -0.25])\n",
+    "                                range_lst=[-0.2, 0.2, 0.2, -0.2])\n",
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
     "full_info = mapper_plotter.extract_data()\n",
     "mapper_plotter.map_colors(choose, size=0, threshold=10)\n",
-    "mapper_plotter.plot(choose, avg=False, set_label=True, size=100000)"
+    "mapper_plotter.plot(choose, avg=False, set_label=True, size=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapper_plotter.update_colors(choose='天候名稱')\n",
+    "mapper_plotter.plot('天候名稱', set_label=True)"
    ]
   },
   {
