--- a/Version4/Motor.ipynb
+++ b/Version4/Motor.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,6 +120,74 @@
     "full_dataA1 = preprocess(dataA1, target='機車', lst=select_lst)\n",
     "full_dataA2 = preprocess(dataA2, target='機車', lst=select_lst)\n",
     "mapper_numpy, rbind_data, dummy_data, death = process_other(full_dataA1, full_dataA2, downsample=0.6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kmodes.kmodes import KModes\n",
+    "\n",
+    "cost = []\n",
+    "all_results = {}\n",
+    "K = range(1, 6)\n",
+    "\n",
+    "for k in K:\n",
+    "\n",
+    "    km = KModes(\n",
+    "    n_clusters=k, \n",
+    "    init='Huang',\n",
+    "    verbose=1,\n",
+    "    random_state=42,\n",
+    "    n_jobs=10\n",
+    "    )\n",
+    "\n",
+    "    labels = km.fit_predict(rbind_data)\n",
+    "    cost.append(km.cost_)\n",
+    "    all_results[k] = {\n",
+    "        'cost': km.cost_,\n",
+    "        'labels': labels,\n",
+    "        'centroids': km.cluster_centroids_\n",
+    "    }\n",
+    "\n",
+    "optimal_k = K[cost.index(min(cost))]\n",
+    "optimal_result = all_results[optimal_k]\n",
+    "\n",
+    "# with open('Version3/Data/CarData/kmode_result.pickle', 'wb') as f:\n",
+    "#     pickle.dump(all_results, f)\n",
+    "\n",
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.plot(K, cost, marker='o')\n",
+    "plt.xlabel('Number of Clusters (k)')\n",
+    "plt.ylabel('Cost')\n",
+    "plt.title('Elbow Method for Optimal k')\n",
+    "plt.show()\n",
+    "\n",
+    "# save all_results\n",
+    "with open('./Data/Kmode/Motor.pkl', 'wb') as f:\n",
+    "    pickle.dump(all_results, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    57441\n",
+      "0    50190\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pd.Series(all_results[2]['labels']).value_counts())\n",
+    "rbind_data['Cluster'] = all_results[2]['labels']"
    ]
   },
   {
@@ -229,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,14 +346,12 @@
     "choose = '死亡'\n",
     "rbind_data['死亡'] = death\n",
     "\n",
-    "for i in [32]:\n",
-    "    print(f'Seed: {i}')\n",
-    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=50,\n",
-    "                                   range_lst=[-0.1, 0.1, 0.1, -0.1], dim=3)\n",
-    "    mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
-    "    full_info, label_out = mapper_plotter.extract_data(rz=100)\n",
-    "    mapper_plotter.map_colors(choose, size=10, threshold=0)\n",
-    "    mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=3000, minimum_lst=[-0.025, 0.05])"
+    "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=32, iterations=50,\n",
+    "                                range_lst=[-0.1, 0.1, 0.1, -0.1], dim=3)\n",
+    "mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
+    "full_info, label_out = mapper_plotter.extract_data(rz=100)\n",
+    "mapper_plotter.map_colors(choose, size=10, threshold=0)\n",
+    "mapper_plotter.plot_dens(choose, avg=True, set_label=False, size=3000, minimum_lst=[-0.025, 0.05])"
    ]
   },
   {
@@ -311,16 +377,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "choose = '天候名稱'\n",
+    "full_info, label_out = mapper_plotter.extract_data(rz=100)\n",
+    "mapper_plotter.map_colors(choose, size=10, threshold=5)\n",
+    "mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "choose = 'Cluster'\n",
     "\n",
-    "for i in [32]:\n",
-    "    print(f'Seed: {i}')\n",
-    "    mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=i, iterations=50,\n",
-    "                                   range_lst=[-0.1, 0.1, 0.1, -0.1], dim=3)\n",
-    "    mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
-    "    full_info, label_out = mapper_plotter.extract_data(rz=100)\n",
-    "    mapper_plotter.map_colors(choose, size=0, threshold=5)\n",
-    "    mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)"
+    "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=32, iterations=50,\n",
+    "                                range_lst=[-0.1, 0.1, 0.1, -0.1], dim=3)\n",
+    "mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
+    "full_info, label_out = mapper_plotter.extract_data(rz=100)\n",
+    "mapper_plotter.map_colors(choose, size=5, threshold=5)\n",
+    "mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)"
    ]
   },
   {
