--- a/Version4/Car.ipynb
+++ b/Version4/Car.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
    "source": [
     "full_dataA1 = preprocess(dataA1, target='汽車', lst=select_lst)\n",
     "full_dataA2 = preprocess(dataA2, target='汽車', lst=select_lst)\n",
-    "mapper_numpy, rbind_data, dummy_data, death = process_other(full_dataA1, full_dataA2, downsample=False)"
+    "mapper_numpy, rbind_data, dummy_data, death = process_other(full_dataA1, full_dataA2, downsample=False, en=True)"
    ]
   },
   {
@@ -234,17 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# grid_search_info = {\n",
-    "#     'lens': lens,\n",
-    "#     'mapper_numpy': mapper_numpy,\n",
-    "#     'rbind_data': rbind_data,\n",
-    "# }\n",
-    "# with open('../ForMatrix/CalculatedData/car.pkl', 'wb') as f:\n",
-    "#     pickle.dump(grid_search_info, f)"
+    "grid_search_info = {\n",
+    "    'lens': lens,\n",
+    "    'mapper_numpy': mapper_numpy,\n",
+    "    'rbind_data': rbind_data,\n",
+    "}\n",
+    "with open('../ForMatrix/CalculatedData/Car.pkl', 'wb') as f:\n",
+    "    pickle.dump(grid_search_info, f)"
    ]
   },
   {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,15 +328,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "choose = '顯著特徵'\n",
-    "rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']\n",
+    "# choose = '顯著特徵'\n",
+    "# rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']\n",
+    "choose = 'Significant Features'\n",
+    "rbind_data['Significant Features'] = rbind_data['Road Category - Subcategory'] + ',' + rbind_data['Traffic Signal - Signal Operation'] + ',' + rbind_data[\"Weather Condition\"]\n",
     "\n",
     "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=5, iterations=50,\n",
-    "                                range_lst=[-0.05, 0.175, 0.15, -0.1], dim=3)\n",
+    "                                range_lst=[-0.05, 0.15, 0.15, -0.1], dim=3)\n",
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
     "full_info, outlier_info = mapper_plotter.extract_data(rz=45, ry=-20)\n",
     "mapper_plotter.map_colors(choose, size=15, threshold=500)\n",
-    "mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)"
+    "mapper_plotter.plot(choose, avg=False, set_label=True, size=3000, anchor=1.43)"
    ]
   },
   {
@@ -349,7 +351,7 @@
     "rbind_data['死亡'] = death\n",
     "\n",
     "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=5, iterations=50,\n",
-    "                                range_lst=[-0.15, 0.175, 0.2, -0.2], dim=3)\n",
+    "                                range_lst=[-0.1, 0.15, 0.2, -0.2], dim=3)\n",
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
     "full_info, label_out = mapper_plotter.extract_data(rz=45, ry=-20)\n",
     "mapper_plotter.map_colors(choose, size=15, threshold=0)\n",
