--- a/Version1/A1Mapper.ipynb
+++ b/Version1/A1Mapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4f1c9587-3c13-4c26-831b-a4e8611a7aab",
    "metadata": {},
    "outputs": [],
@@ -24,14 +24,14 @@
     "from tdamapper.clustering import FailSafeClustering\n",
     "from sklearn import metrics\n",
     "\n",
-    "from chi import *\n",
-    "from functions import *\n",
-    "from regressionP import *"
+    "# from chi import *\n",
+    "# from functions import *\n",
+    "# from regressionP import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7812db73-b61a-4054-a695-5b9f657f030f",
    "metadata": {},
    "outputs": [],
@@ -843,7 +843,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
