--- a/Version3/Pass.ipynb
+++ b/Version3/Pass.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,15 +85,15 @@
     "    # '肇因研判大類別名稱-個別',\n",
     "    \n",
     "    # 子類別\n",
-    "    '道路型態子類別名稱', '事故位置子類別名稱', '事故類型及型態子類別名稱', '肇因研判子類別名稱-主要',\n",
-    "    '當事者區分-類別-子類別名稱-車種', '當事者行動狀態子類別名稱', '車輛撞擊部位子類別名稱-最初',\n",
-    "    '車輛撞擊部位子類別名稱-其他', '肇因研判子類別名稱-個別',\n",
+    "    # '道路型態子類別名稱', '事故位置子類別名稱', '事故類型及型態子類別名稱', '肇因研判子類別名稱-主要',\n",
+    "    # '當事者區分-類別-子類別名稱-車種', '當事者行動狀態子類別名稱', '車輛撞擊部位子類別名稱-最初',\n",
+    "    # '車輛撞擊部位子類別名稱-其他', '肇因研判子類別名稱-個別',\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
      "output_type": "stream",
      "text": [
       "['行動電話或電腦或其他相類功能裝置名稱', '當事者區分-類別-大類別名稱-車種', '車輛撞擊部位大類別名稱-最初']\n",
-      "dummy_data: (3143, 210)\n"
+      "dummy_data: (3143, 115)\n"
      ]
     }
    ],
@@ -222,26 +222,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# grid_search_info = {\n",
-    "#     'lens': lens,\n",
-    "#     'mapper_numpy': mapper_numpy,\n",
-    "#     'rbind_data': rbind_data,\n",
-    "# }\n",
-    "# with open('../ForMatrix/CalculatedData/pass.pkl', 'wb') as f:\n",
-    "#     pickle.dump(grid_search_info, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_mca(mca, dummy_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_search_info = {\n",
+    "    'lens': lens,\n",
+    "    'mapper_numpy': mapper_numpy,\n",
+    "    'rbind_data': rbind_data,\n",
+    "}\n",
+    "with open('../ForMatrix/CalculatedData/Pass.pkl', 'wb') as f:\n",
+    "    pickle.dump(grid_search_info, f)"
    ]
   },
   {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,13 +333,15 @@
    "source": [
     "choose = '顯著特徵'\n",
     "rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']\n",
+    "# choose = 'Significant Features'\n",
+    "# rbind_data['Significant Features'] = rbind_data['Road Category - Subcategory'] + ',' + rbind_data['Traffic Signal - Signal Operation'] + ',' + rbind_data[\"Weather Condition\"]\n",
     "\n",
     "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=87, iterations=100, dim=2,\n",
     "                                range_lst=[-0.2, 0.2, 0.2, -0.2])\n",
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
     "full_info = mapper_plotter.extract_data()\n",
     "mapper_plotter.map_colors(choose, size=0, threshold=10)\n",
-    "mapper_plotter.plot(choose, avg=False, set_label=True, size=1000)"
+    "mapper_plotter.plot(choose, avg=False, set_label=True, size=1000, anchor=1.18)"
    ]
   },
   {
@@ -362,7 +364,7 @@
     "rbind_data['死亡'] = death\n",
     "\n",
     "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=87, iterations=100, dim=2,\n",
-    "                                range_lst=[-0.2, 0.2, 0.2, -0.2])\n",
+    "                                range_lst=[-0.15, 0.15, 0.2, -0.2])\n",
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, sum_of_data, avg=True)\n",
     "full_info, label_out = mapper_plotter.extract_data()\n",
     "mapper_plotter.map_colors(choose, size=0, threshold=0)\n",
