--- a/Version4/Motor.ipynb
+++ b/Version4/Motor.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -236,26 +236,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# grid_search_info = {\n",
-    "#     'lens': lens,\n",
-    "#     'mapper_numpy': mapper_numpy,\n",
-    "#     'rbind_data': rbind_data,\n",
-    "# }\n",
-    "# with open('../ForMatrix/CalculatedData/motor.pkl', 'wb') as f:\n",
-    "#     pickle.dump(grid_search_info, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_mca(mca, dummy_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_search_info = {\n",
+    "    'lens': lens,\n",
+    "    'mapper_numpy': mapper_numpy,\n",
+    "    'rbind_data': rbind_data,\n",
+    "}\n",
+    "with open('../ForMatrix/CalculatedData/Motor.pkl', 'wb') as f:\n",
+    "    pickle.dump(grid_search_info, f)"
    ]
   },
   {
@@ -362,13 +362,15 @@
    "source": [
     "choose = '顯著特徵'\n",
     "rbind_data['顯著特徵'] = rbind_data['道路型態子類別名稱'] + ',' + rbind_data['號誌-號誌動作名稱'] + ',' + rbind_data['天候名稱']\n",
+    "# choose = 'Significant Features'\n",
+    "# rbind_data['Significant Features'] = rbind_data['Road Category - Subcategory'] + ',' + rbind_data['Traffic Signal - Signal Operation'] + ',' + rbind_data[\"Weather Condition\"]\n",
     "\n",
     "mapper_plotter = MapperPlotter(detailed_results_df['mapper_info'][0], rbind_data, seed=32, iterations=50,\n",
     "                                range_lst=[-0.1, 0.1, 0.1, -0.1], dim=3)\n",
     "mapper_plot = mapper_plotter.create_mapper_plot(choose, most_common_encoded_label, avg=False)\n",
     "full_info, label_out = mapper_plotter.extract_data(rz=100)\n",
-    "mapper_plotter.map_colors(choose, size=5, threshold=500)\n",
-    "mapper_plotter.plot(choose, avg=False, set_label=True, size=3000)"
+    "mapper_plotter.map_colors(choose, size=10, threshold=500)\n",
+    "mapper_plotter.plot(choose, avg=False, set_label=True, size=3000, anchor=1.18)"
    ]
   },
   {
